[package]
name = "l4lb"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
clap = { version = "4.1", features = ["derive"] }
l4lb-common = { path = "../l4lb-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = [
	"macros",
	"rt",
	"rt-multi-thread",
	"net",
	"signal",
] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
network-types = "0.0.4"
mur3 = "0.1"


[[bin]]
name = "l4lb"
path = "src/main.rs"
